{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 38,
  "lineage": "b5892f51-4acd-b710-3196-74c614818efd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:internet-gateway/igw-0400cfbf27b15f604",
            "id": "igw-0400cfbf27b15f604",
            "owner_id": "244086558475",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-igw"
            },
            "tags_all": {
              "Name": "prd-igw"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:route-table/rtb-08228329ece1bfd64",
            "id": "rtb-08228329ece1bfd64",
            "owner_id": "244086558475",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "prd-priv-rt"
            },
            "tags_all": {
              "Name": "prd-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:route-table/rtb-0d91a8cd58683b9c5",
            "id": "rtb-0d91a8cd58683b9c5",
            "owner_id": "244086558475",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0400cfbf27b15f604",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prd-pub-rt"
            },
            "tags_all": {
              "Name": "prd-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd-igw",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-priv-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082bfc2e11ddb751e",
            "region": "us-east-1",
            "route_table_id": "rtb-08228329ece1bfd64",
            "subnet_id": "subnet-0501edea1e8b9569f"
          },
          "dependencies": [
            "aws_route_table.prd-priv-rt",
            "aws_subnet.prd-priv-subnet-1",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-priv-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd057f5cde2e5758",
            "region": "us-east-1",
            "route_table_id": "rtb-08228329ece1bfd64",
            "subnet_id": "subnet-05f0fc301e1b44ae6"
          },
          "dependencies": [
            "aws_route_table.prd-priv-rt",
            "aws_subnet.prd-priv-subnet-2",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-priv-rt-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0521397e32572ac82",
            "region": "us-east-1",
            "route_table_id": "rtb-08228329ece1bfd64",
            "subnet_id": "subnet-0e2827172042e7c01"
          },
          "dependencies": [
            "aws_route_table.prd-priv-rt",
            "aws_subnet.prd-priv-subnet-3",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-pub-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b52524038cebc3fe",
            "region": "us-east-1",
            "route_table_id": "rtb-0d91a8cd58683b9c5",
            "subnet_id": "subnet-083812da1bb8183b0"
          },
          "dependencies": [
            "aws_internet_gateway.prd-igw",
            "aws_route_table.prd-pub-rt",
            "aws_subnet.prd-pub-subnet-1",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-pub-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f135a1e832e88baa",
            "region": "us-east-1",
            "route_table_id": "rtb-0d91a8cd58683b9c5",
            "subnet_id": "subnet-072f2dda34480a5dd"
          },
          "dependencies": [
            "aws_internet_gateway.prd-igw",
            "aws_route_table.prd-pub-rt",
            "aws_subnet.prd-pub-subnet-2",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd-pub-rt-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0882b63c6d4c2867c",
            "region": "us-east-1",
            "route_table_id": "rtb-0d91a8cd58683b9c5",
            "subnet_id": "subnet-0f5372d585b1e708d"
          },
          "dependencies": [
            "aws_internet_gateway.prd-igw",
            "aws_route_table.prd-pub-rt",
            "aws_subnet.prd-pub-subnet-3",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:security-group/sg-04bbdc55ef5c88e14",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04bbdc55ef5c88e14",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": " allow HTTP inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250916032113816000000001",
            "name_prefix": "terraform-",
            "owner_id": "244086558475",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04618286a8e86b3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-priv-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-0501edea1e8b9569f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0501edea1e8b9569f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-priv-subnet-1"
            },
            "tags_all": {
              "Name": "prd-priv-subnet-1"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-priv-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-05f0fc301e1b44ae6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f0fc301e1b44ae6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-priv-subnet-2"
            },
            "tags_all": {
              "Name": "prd-priv-subnet-2"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-priv-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-0e2827172042e7c01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2827172042e7c01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-priv-subnet-3"
            },
            "tags_all": {
              "Name": "prd-priv-subnet-3"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-083812da1bb8183b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083812da1bb8183b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-pub-subnet-1"
            },
            "tags_all": {
              "Name": "prd-pub-subnet-1"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-072f2dda34480a5dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072f2dda34480a5dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-pub-subnet-2"
            },
            "tags_all": {
              "Name": "prd-pub-subnet-2"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd-pub-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:subnet/subnet-0f5372d585b1e708d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5372d585b1e708d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244086558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prd-pub-subnet-3"
            },
            "tags_all": {
              "Name": "prd-pub-subnet-3"
            },
            "vpc_id": "vpc-0015bd9c3a3cca299"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:vpc/vpc-0015bd9c3a3cca299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9b89ec7391b784a",
            "default_route_table_id": "rtb-00ecac3be3818d5dd",
            "default_security_group_id": "sg-0542004df4e380d05",
            "dhcp_options_id": "dopt-062df78cad6d362d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0015bd9c3a3cca299",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ecac3be3818d5dd",
            "owner_id": "244086558475",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244086558475:vpc/vpc-04618286a8e86b3ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-013251a66ece37714",
            "default_route_table_id": "rtb-08e56b6e584c0bd47",
            "default_security_group_id": "sg-0e72ec6ab70473138",
            "dhcp_options_id": "dopt-062df78cad6d362d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04618286a8e86b3ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e56b6e584c0bd47",
            "owner_id": "244086558475",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}